--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -21,12 +21,12 @@ spec:
       autoscaling.knative.dev/window: "10s"
       autoscaling.knative.dev/target: "40"
       autoscaling.knative.dev/metric: "rps"
-      autoscaling.knative.dev/target: "50"
+      autoscaling.knative.dev/target: "60"
   - name: api_descriptor
     value:
       type: openapi
       location:
-        path: "/api/v1/swagger.json"
+        path: "/api/v1/api-docs"
       owner: group:surfers-crew
       system: surferslookout
       description: "Surferslookout forecast api"
