--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'SurfersLookout Backend'
+site_name: 'SurfersLookout RESTful Service'
 repo_url: https://github.com/davlloyd/surfers-api
 repo_name: Github
 edit_uri: blob/main/docs/
