--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -4,6 +4,7 @@ metadata:
   name: surfersapi
   labels:
     apps.tanzu.vmware.com/workload-type: web
+    deployment-model: blue-green
     app.kubernetes.io/part-of: surferslookout
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/language: python
