--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,9 +18,9 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
+                "surfersapi:app",
                 "--host", "0.0.0.0",
-                "--port", "8080"
+                "--port", "8000"
             ],
             "justMyCode": true
         },
