--- a/catalog/default/catalog-info.yaml
+++ b/catalog/default/catalog-info.yaml
@@ -20,4 +20,4 @@ spec:
   owner: group:surfers-crew
   system: surfers-system
   providesApis:
-    - alpha/surfersapi-tap2.tanzu.rocks
+    - surfersapi-tap1.tanzu.rocks
