--- a/config/api-reg.yaml
+++ b/config/api-reg.yaml
@@ -1,7 +1,7 @@
 apiVersion: apis.apps.tanzu.vmware.com/v1alpha1
 kind: APIDescriptor
 metadata:
-  name: surfers-api-descriptor
+  name: surfersapi
 spec:
   description: "API Endpoints to provide climate data to the Surfers web front end"
   location:
@@ -10,9 +10,7 @@ spec:
         apiVersion: serving.knative.dev/v1
         kind: Service
         name: surfersapi
-    path: "/api/v1/tech-docs"
+    path: "/api/v1/api-docs"
   owner: group:surfers-crew
   system: surfers-system
   type: openapi
-
-      
