removed python environment use from vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "tanzu.sourceImage": "us.gcr.io/lloyd-266015/supply-chain/surfersapi-source",
     "python.autoComplete.extraPaths": [
         
-    ]
+    ],
+    "python.terminal.activateEnvironment": false
 }
