--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -14,6 +14,9 @@ spec:
   params:
   - name: clusterBuilder
     value: full-jammy
+  - name: testing_pipeline_matching_labels
+    value:
+      apps.tanzu.vmware.com/language: python
   - name: annotations
     value:
       autoscaling.knative.dev/min-scale: "1"
